Publish README.html and index.html for 101 class.

--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-02-10 Sat 03:19 -->
+<!-- 2018-02-10 Sat 22:03 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title></title>
@@ -232,47 +232,47 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org4bd7f9d">1. Null Space Labs</a>
+<li><a href="#orge1ef099">1. Null Space Labs</a>
 <ul>
-<li><a href="#org8f4d461">1.1. When are classes held at NSL?</a></li>
-<li><a href="#org810fdc3">1.2. Where is NSL?</a></li>
+<li><a href="#orgcff7d7c">1.1. When are classes held at NSL?</a></li>
+<li><a href="#org8452aa3">1.2. Where is NSL?</a></li>
 </ul>
 </li>
-<li><a href="#orgbd098b0">2. Git Classes</a>
+<li><a href="#org7d92e57">2. Git Classes</a>
 <ul>
-<li><a href="#orgfda8654">2.1. How much does the class cost?</a></li>
-<li><a href="#orge18eafe">2.2. Prepare your computer before the class</a></li>
-<li><a href="#org7868847">2.3. Prepare your brain before the class</a></li>
+<li><a href="#org4bea8b2">2.1. How much does the class cost?</a></li>
+<li><a href="#org01ea030">2.2. Prepare your computer before the class</a></li>
+<li><a href="#org042f4be">2.3. Prepare your brain before the class</a></li>
 </ul>
 </li>
-<li><a href="#orga9a87b3">3. Software Engineering 101: Introduction to Git</a>
+<li><a href="#org0de73f6">3. Software Engineering 101: Introduction to Git</a>
 <ul>
-<li><a href="#orge51158b">3.1. What will we cover?</a>
+<li><a href="#org1caf7d7">3.1. What will we cover?</a>
 <ul>
-<li><a href="#org065496b">3.1.1. Topics we'll cover</a></li>
+<li><a href="#org2094216">3.1.1. Topics we'll cover</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#org1a5675f">4. Software Engineering 201: Advanced Git</a>
+<li><a href="#orgc44cc11">4. Software Engineering 201: Advanced Git</a>
 <ul>
-<li><a href="#org7689c17">4.1. What will we cover?</a></li>
-<li><a href="#org773a436">4.2. How much does the class cost?</a></li>
+<li><a href="#orgf68db36">4.1. What will we cover?</a></li>
+<li><a href="#org45ab1ad">4.2. How much does the class cost?</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org4bd7f9d" class="outline-2">
-<h2 id="org4bd7f9d"><span class="section-number-2">1</span> Null Space Labs</h2>
+<div id="outline-container-orge1ef099" class="outline-2">
+<h2 id="orge1ef099"><span class="section-number-2">1</span> Null Space Labs</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <a href="http://032.la/">Null Space Labs</a> (or <code>NSL</code>) is a <a href="http://hackerspaces.org/">hacker space</a> in Los Angeles, California.
 </p>
 </div>
 
-<div id="outline-container-org8f4d461" class="outline-3">
-<h3 id="org8f4d461"><span class="section-number-3">1.1</span> When are classes held at NSL?</h3>
+<div id="outline-container-orgcff7d7c" class="outline-3">
+<h3 id="orgcff7d7c"><span class="section-number-3">1.1</span> When are classes held at NSL?</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 Just about every Saturday a class is held.
@@ -284,8 +284,8 @@ Check out the <a href="http://www.meetup.com/NullSpaceLabs/events/">events on Me
 </div>
 </div>
 
-<div id="outline-container-org810fdc3" class="outline-3">
-<h3 id="org810fdc3"><span class="section-number-3">1.2</span> Where is NSL?</h3>
+<div id="outline-container-org8452aa3" class="outline-3">
+<h3 id="org8452aa3"><span class="section-number-3">1.2</span> Where is NSL?</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 We are located at <a href="https://www.google.com/maps/place/10717+W+Chandler+Blvd,+North+Hollywood,+CA+91601">10717 West Chandler Blvd in North Hollywood, California</a>:
@@ -298,11 +298,11 @@ We are located at <a href="https://www.google.com/maps/place/10717+W+Chandler+Bl
 </div>
 </div>
 
-<div id="outline-container-orgbd098b0" class="outline-2">
-<h2 id="orgbd098b0"><span class="section-number-2">2</span> Git Classes</h2>
+<div id="outline-container-org7d92e57" class="outline-2">
+<h2 id="org7d92e57"><span class="section-number-2">2</span> Git Classes</h2>
 <div class="outline-text-2" id="text-2">
-</div><div id="outline-container-orgfda8654" class="outline-3">
-<h3 id="orgfda8654"><span class="section-number-3">2.1</span> How much does the class cost?</h3>
+</div><div id="outline-container-org4bea8b2" class="outline-3">
+<h3 id="org4bea8b2"><span class="section-number-3">2.1</span> How much does the class cost?</h3>
 <div class="outline-text-3" id="text-2-1">
 <p>
 Git classes vary in price from $40 to $80 each depending on the complexity of the course primarily.
@@ -346,8 +346,8 @@ You can pay at the door in cash or other electronic methods on site.
 </div>
 </div>
 
-<div id="outline-container-orge18eafe" class="outline-3">
-<h3 id="orge18eafe"><span class="section-number-3">2.2</span> Prepare your computer before the class</h3>
+<div id="outline-container-org01ea030" class="outline-3">
+<h3 id="org01ea030"><span class="section-number-3">2.2</span> Prepare your computer before the class</h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>Install the latest <a href="https://git-scm.com/downloads">git from git-scm.com</a>
@@ -373,8 +373,8 @@ You can pay at the door in cash or other electronic methods on site.
 </div>
 </div>
 
-<div id="outline-container-org7868847" class="outline-3">
-<h3 id="org7868847"><span class="section-number-3">2.3</span> Prepare your brain before the class</h3>
+<div id="outline-container-org042f4be" class="outline-3">
+<h3 id="org042f4be"><span class="section-number-3">2.3</span> Prepare your brain before the class</h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://git-scm.com/book/en/v2">https://git-scm.com/book/en/v2</a></li>
@@ -385,8 +385,8 @@ You can pay at the door in cash or other electronic methods on site.
 </div>
 </div>
 
-<div id="outline-container-orga9a87b3" class="outline-2">
-<h2 id="orga9a87b3"><span class="section-number-2">3</span> <a href="https://www.meetup.com/NullSpaceLabs/events/246980718/">Software Engineering 101: Introduction to Git</a></h2>
+<div id="outline-container-org0de73f6" class="outline-2">
+<h2 id="org0de73f6"><span class="section-number-2">3</span> <a href="classes/software-engineering-101-introduction-to-git/index.html">Software Engineering 101: Introduction to Git</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Learn all about revision control with git, the tool you are encouraged to curse at.
@@ -401,16 +401,16 @@ This class is graciously hosted by NSL Keyholder Merlin!
 </p>
 </div>
 
-<div id="outline-container-orge51158b" class="outline-3">
-<h3 id="orge51158b"><span class="section-number-3">3.1</span> What will we cover?</h3>
+<div id="outline-container-org1caf7d7" class="outline-3">
+<h3 id="org1caf7d7"><span class="section-number-3">3.1</span> What will we cover?</h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 Practical revision control basics with git.
 </p>
 </div>
 
-<div id="outline-container-org065496b" class="outline-4">
-<h4 id="org065496b"><span class="section-number-4">3.1.1</span> Topics we'll cover</h4>
+<div id="outline-container-org2094216" class="outline-4">
+<h4 id="org2094216"><span class="section-number-4">3.1.1</span> Topics we'll cover</h4>
 <div class="outline-text-4" id="text-3-1-1">
 <ul class="org-ul">
 <li>Why get good with git?</li>
@@ -430,8 +430,8 @@ Practical revision control basics with git.
 </div>
 </div>
 
-<div id="outline-container-org1a5675f" class="outline-2">
-<h2 id="org1a5675f"><span class="section-number-2">4</span> Software Engineering 201: Advanced Git</h2>
+<div id="outline-container-orgc44cc11" class="outline-2">
+<h2 id="orgc44cc11"><span class="section-number-2">4</span> Software Engineering 201: Advanced Git</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Learn all about revision control with git, the tool you are encouraged to curse at.
@@ -446,8 +446,8 @@ This class is graciously hosted by NSL Keyholder Merlin!
 </p>
 </div>
 
-<div id="outline-container-org7689c17" class="outline-3">
-<h3 id="org7689c17"><span class="section-number-3">4.1</span> What will we cover?</h3>
+<div id="outline-container-orgf68db36" class="outline-3">
+<h3 id="orgf68db36"><span class="section-number-3">4.1</span> What will we cover?</h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 This class is currently unspecified!
@@ -455,8 +455,8 @@ This class is currently unspecified!
 </div>
 </div>
 
-<div id="outline-container-org773a436" class="outline-3">
-<h3 id="org773a436"><span class="section-number-3">4.2</span> How much does the class cost?</h3>
+<div id="outline-container-org45ab1ad" class="outline-3">
+<h3 id="org45ab1ad"><span class="section-number-3">4.2</span> How much does the class cost?</h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 This class costs $80 for anyone who isn't a member of Null Space Labs.
@@ -471,7 +471,7 @@ You can pay at the door in cash or other electronic methods on site.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: merlin</p>
-<p class="date">Created: 2018-02-10 Sat 03:19</p>
+<p class="date">Created: 2018-02-10 Sat 22:03</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
